Update Javadoc in CompactionJobTracker